2008-07-19  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	0.10.8.2 pre-release

2008-07-19  Jan Schmidt  <jan.schmidt@sun.com>

	* ext/Makefile.am:
	Finish hooking up pulseaudio plugin to the build.

	* ext/pulse/pulsemixerctrl.c:
	Fix compilation error.

2008-07-19  Jan Schmidt  <jan.schmidt@sun.com>

	* po/LINGUAS:
	* po/lt.po:
	Add new lithunian translation, and add french to the LINGUAS
	file.

2008-07-19  Jan Schmidt  <jan.schmidt@sun.com>

	* ext/soup/gstsouphttpsrc.c:
	Fix Soup HTTP source seeking.
	Patch By: Wouter Cloetens  <wouter at mind be>
	Fixes: #540300

	* tests/check/elements/.cvsignore:
	Ignore new check programs.

2008-07-19  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-good-plugins-docs.sgml:
	* docs/plugins/gst-plugins-good-plugins-sections.txt:
	* docs/plugins/gst-plugins-good-plugins.args:
	* docs/plugins/gst-plugins-good-plugins.hierarchy:
	* docs/plugins/gst-plugins-good-plugins.interfaces:
	* docs/plugins/gst-plugins-good-plugins.prerequisites:
	* docs/plugins/inspect/plugin-interleave.xml:
	* docs/plugins/inspect/plugin-replaygain.xml:
	* tests/check/Makefile.am:

	Move replaygain and interleave plugins from -bad.
	Fixes: #543406
	Fixes: #536228

2008-07-18  Mark Nauwelaerts  <mark.nauwelaerts@collabora.co.uk>

	* gst/qtdemux/qtdemux.c: (gst_qtdemux_add_stream),
	(qtdemux_parse_trak):
	Revert ISO base media spec based pixel-aspect-ratio calculation.
	Fixes #543300.

2008-07-17  Edward Hervey  <edward.hervey@collabora.co.uk>

	* sys/osxvideo/osxvideosink.m:
	Fix minor build issues on macosx.
	Fixes #543054

2008-07-17  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* configure.ac::
	* ext/taglib/Makefile.am::
	  Only use -Wno-attributes (which is there to work around a
	  bug in the taglib 1.5 headers) if the c++ compiler actually
	  supports it (#543255).

2008-07-17  Tim-Philipp Müller  <tim.muller at collabora co uk>
