@@ -1,3 +1,10 @@
+2008-07-22  Stefan Kost  <ensonic@users.sf.net>
+
+	* gst/debug/gsttaginject.c:
+	* gst/debug/gsttaginject.h:
+	  Sent tags in _transform_ip() instead of _start(). Fixes #543404
+	  partially.
+
 2008-07-19  Jan Schmidt  <jan.schmidt@sun.com>
 
 	* configure.ac:
